--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@ profiles
           <li data-id="naxx">Naxxramas</li>
           <li data-id="worldboss">World Boss</li>
           <li data-id="pvp">PvP</li>
+          <li data-id="frostresistance">Frost Resistance</li>
           <li data-id="other">Other</li>
         </ul>
         <ul class="phases">
