Added Frost Resistance

--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@ profiles
           <span id="haste"></span>
         </li>
         <li>
+          <label>FrR</label>
+          <span id="FrR"></span>
+        </li>
+        <li>
           <label>Sets</label>
           <span id="sets"></span>
         </li>
